# Epitech-ECS-RType

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  conanfile.txt
doc/: ecs.puml
include/client/: bullet.hpp  map.hpp  player.hpp
include/engine/: bundle.hpp  component.hpp  concepts_impl.hpp  definitions.hpp  dispatcher.hpp  entity.hpp  event.hpp  event_context.hpp  game_storage.hpp  prelude.hpp  query.hpp  ressource.hpp  state.hpp  state_machine.hpp  storable.hpp  system.hpp  uuid.hpp  world.hpp
include/engine/built_in/: position.hpp
include/engine/built_in/component/: hitbox.hpp
include/engine/built_in/system/: damage_system.hpp
include/network/: inetwork.hpp  message.hpp  message_dispatcher_system.hpp  message_dispatching_bundle.hpp  network_container.hpp  network_event_handler.hpp  network_events.hpp  network_system.hpp  serialize.hpp  socket.hpp
include/r-type/component/: bullet.hpp  enemy.hpp  player.hpp
include/r-type/system/: bullet.hpp  map.hpp  player.hpp
include/render/: bundles.hpp  events.hpp  ressources.hpp  sprite_component.hpp  window.hpp
src/client/: bullet.cpp  main.cpp  map.cpp  player.cpp
src/engine/: component.cpp  entity.cpp  game_storage.cpp  state.cpp  system.cpp  world.cpp
src/engine/core/: entity.cpp  event.cpp  game_storage.cpp  query.cpp  state.cpp  system.cpp  test.cpp  world.cpp
src/engine/network/: message_dispatcher_system.cpp  message_inbox.cpp  network_container.cpp  socket.cpp
src/engine/render/: bundles.cpp  render.cpp  sprite_component.cpp  window.cpp
src/server/: main.cpp
tests/engine/: componentsTest.cpp  event.cpp  ressource.cpp  serialization.cpp  systems.cpp  world.cpp
tests/render/: window.cpp
